--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -40,26 +40,22 @@ html {
   width: 31vw;
   font-size: 12px;
   height: 80vh;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .content{
   margin-top: 1rem;
+  margin-bottom: 1rem;
   max-height: 100%;
-  overflow-y: scroll;
 }
 
 .transitLines {
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin: 1rem 2rem 0rem 2rem;
+  margin: 1rem 2rem 1rem 2rem;
   padding: 0.8rem;
   text-align: left;
   cursor: pointer;
-}
-
-.transitTimes {
-  height: 65vh;
 }
 
 .searchbar input[type=text]{
